# lupabase

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  bacon.toml  deny.toml  insta.yaml
.config/: bacon.toml
.github/: dependabot.yml
.github/workflows/: automerge_dependabot.yml  run_tests.yml
.github/workflows/setup-toolchains/: action.yml
src/: database.rs  error.rs  lib.rs  prelude.rs  record.rs  record_utils.rs  utils.rs
src/database/: bytes.rs  io.rs  mod.rs  operation.rs  operation_operatable.rs  operation_path.rs
src/engine/: cbordb.rs  diskdb.rs  jsondb.rs  memorydb.rs  mod.rs  transactiondb.rs
src/record/: mod.rs  operatable.rs  utils.rs
src/serdes/: bytes.rs  mod.rs
src/transaction/: io.rs  mod.rs  operation.rs
tests/: basics.rs  tests_records.rs  tests_utils.rs  transactions.rs  variadics.rs
tests/snapshots/: basics__CborDB Storage reinitialized.snap  basics__DB inserted all.snap  basics__JsonDB reinitialized.snap  basics__JsonDB: DB inserted.snap  basics__MemoryDB Storage backup.snap  basics__MemoryDB: DB updated.snap  basics__Single Storage backup.snap  basics__cbor-MemoryDB Single Storage written.snap  basics__json-DiskDB Storage should be empty.snap  basics__json-MemoryDB Single Storage reinitialized.snap  basics__json-MemoryDB Single Storage should contain the record.snap  basics__json-MemoryDB Storage written.snap  basics__json-MemoryDB initialized should be empty.snap  basics__json-MemoryDB replaced all restored.snap  basics__json-MemoryDB upserted.snap  transactions__CborDB-Transaction Single Storage transaction read before.snap  transactions__CborDB-Transaction Single Storage transaction reinitialized.snap  transactions__CborDB-Transaction Storage transaction initialized.snap  transactions__CborDB-Transaction transaction replaced all empty.snap  transactions__CborDB-Transaction transaction updated.snap  transactions__JsonDB Single Storage commited.snap  transactions__JsonDB Single Storage rolled back.snap  transactions__JsonDB-Transaction Storage transaction reinitialized.snap  transactions__JsonDB-Transaction transaction inserted all.snap  transactions__cbor-MemoryDB Storage commited.snap  transactions__cbor-TransactionDB Single Storage transaction initialized.snap  transactions__json-DiskDB commited.snap  transactions__json-DiskDB rolled back.snap  transactions__json-MemoryDB Storage rolled back.snap  transactions__json-TransactionDB Single Storage transaction backup.snap  transactions__json-TransactionDB Storage transaction backup.snap  transactions__json-TransactionDB Storage transaction initialized.snap  transactions__json-TransactionDB Storage transaction read before.snap  transactions__json-TransactionDB transaction get all before.snap  transactions__json-TransactionDB transaction inserted.snap  transactions__json-TransactionDB transaction replaced all restored.snap  variadics__JsonDB replaced all empty.snap  variadics__MemoryDB initialized should be empty.snap  variadics__cbor-DiskDB updated all.snap  variadics__cbor-DiskDB updated.snap  (+4 more)
