[package]
name = "lupabase"
version = "2.0.0-dev"
authors = ["sonicjhon1"]
edition = "2024"
description = "Blazingly fast (work-in-progress) database engine written entirely in Rust"
readme = "README.md"
repository = "https://github.com/sonicjhon1/lupabase"
license = "MIT OR Apache-2.0"
keywords = ["database", "embedded", "in-memory", "json", "storage-engine"]
categories = ["database-implementations"]

[lib]
path = "src/lib.rs"

[features]
default = []
cbor = ["dep:minicbor-serde"]
json = ["dep:serde_json"]
full = ["cbor", "json"]

[dependencies]
chrono = { version = "0.4", features = ["clock", "serde"] }
derive_more = { version = "2.0", features = ["from", "display", "error"] }
hashbrown = { version = "0.16", features = ["nightly"] }
itertools = "0.14"
parking_lot = { version = "0.12", features = [
    "nightly",
    "hardware-lock-elision",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", optional = true }
minicbor-serde = { version = "0.6", features = ["full"], optional = true }
tracing = { version = "0.1", features = ["log"] }

[dev-dependencies]
insta = { version = "1", features = ["filters", "ron"] }

[lints.clippy]
needless_return = "allow"
