[package]
name = "lupabase"
version = "2.0.0-dev.1"
authors = ["sonicjhon1"]
edition = "2024"
description = "Blazingly fast (work-in-progress) database engine written entirely in Rust"
readme = "README.md"
repository = "https://github.com/sonicjhon1/lupabase"
license = "MIT OR Apache-2.0"
keywords = ["database", "embedded", "in-memory", "json", "storage-engine"]
categories = ["database-implementations"]

[lib]
path = "src/lib.rs"

[features]
default = ["memory"]

cbor = ["dep:minicbor-serde"]
json = ["dep:serde_json"]
memory = ["cbor"]
full = ["cbor", "json", "memory"]

nightly = ["hashbrown/nightly", "parking_lot/nightly"]

[dependencies]
chrono = { version = "0.4", features = ["clock", "serde"] }
derive_more = { version = "2.1", features = ["display", "error"] }
hashbrown = { version = "0.16" }
itertools = "0.14"
parking_lot = { version = "0.12", features = ["hardware-lock-elision"] }
serde_core = { version = "1.0.228" }
serde_json = { version = "1.0.149", optional = true }
minicbor-serde = { version = "0.6", features = ["full"], optional = true }
tracing = { version = "0.1", features = ["log"] }

[dev-dependencies]
insta = { version = "1", features = ["filters", "ron"] }
serde = { version = "1.0.228", features = ["derive"] }
tempfile = { version = "3", features = ["nightly"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# This is required to avoid conflict with other `serde` users which may require an older version.
[target.'cfg(any())'.dependencies]
serde = { version = "1.0.228", default-features = false, optional = true }

[package.metadata.docs.rs]
all-features = true

[lints.clippy]
needless_return = "allow"
